--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -98,6 +98,125 @@
    "source": [
     "logging.info('I have just tested the things')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e10fdc93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "\n",
+    "class customexception(Exception): #50_1:02\n",
+    "    def __init__(self, error_message, error_details:sys):\n",
+    "        self.error_message = error_message\n",
+    "        _,_,exc_tb = error_details.exc_info()\n",
+    "\n",
+    "        self.lineno=exc_tb.tb_lineno\n",
+    "        self.file_name=exc_tb.tb_frame.f_code.co_filename\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Error occurred in python script name [{self.file_name}] line number [{self.lineno}] error message [{self.error_message}]\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "56384fb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "051b7326",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "C:\\Users\\sudip\\AppData\\Local\\Temp\\ipykernel_5752\\3541106960.py\n",
+      "division by zero\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a = 1/0\n",
+    "except Exception as e:\n",
+    "    #print(sys.exc_info())\n",
+    "    _,_,exc_tb = sys.exc_info()\n",
+    "    print(exc_tb.tb_lineno)\n",
+    "    print(exc_tb.tb_frame.f_code.co_filename)\n",
+    "    #print(exc_tb.tb_frame.)\n",
+    "    print(e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6629e1fa",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f29fe4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class customexception(Exception):\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    def __str__(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20691e8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raise customexception(e, sys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "399d6d84",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(None, None, None)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sys.exc_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "751c7a8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
